@@ -1,5 +1,9 @@
 2024-05-25  Michael Albinus  <michael.albinus@gmx.de>
 
+	* tramp.el (tramp-handle-make-process):
+	* tramp-androidsu.el (tramp-androidsu-handle-make-process):
+	Set sentinel `ignore'.  (Bug#71049)
+
 	* tramp-androidsu.el (tramp-androidsu-maybe-open-connection):
 	* tramp-gvfs.el (tramp-gvfs-maybe-open-connection):
 	Adapt progress-reporter message.
